tests/snapshots/imports__js_should_process_only_elements_imported_from_macro.snap
---
source: tests/imports.rs
---
import { plural } from "@lingui/core/macro";
import { t } from "./custom-t";

 t`Don't touch me!`
 plural(value, {one: "...", other: "..."})

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
import { t } from "./custom-t";
t`Don't touch me!`;
$_i18n._(/*i18n*/ {
    id: "kwTAtG",
    message: "{value, plural, one {...} other {...}}",
    values: {
        value: value
    }
});
